--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-<h1>Proyecto Najuvis!</h1>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="es" lang="es">
+  <head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<title>Najuvis</title>
+	<link rel="shortcut icon" HREF="images/logo.jpg"/>
+	<link rel="stylesheet" type="text/css" href="css/bootstrap/bootstrap.min.css" />
+	<link rel="stylesheet" type="text/css" href="css/index.css" />
+  </head>
+  <body>
+	  	<header>
+		  	<div class="jumbotron">
+		  		<div>
+			  		<h1>Najuvis</h1>
+			  		<p>Un regalo de la vida merece una celebración</p>
+			  		<a href="#"><img alt="face" /></a>
+		  			<a href="#"><img alt="instagram" /></a>
+		  			<a href="#"><img alt="twitter" /></a>
+	  			</div>
+	  			<nav class="navbar navbar-default">
+			       <a class="navbar-brand" href="#">Najuvis</a>
+	  			<ul class="nav navbar-nav">
+
+	  				<li class="active"><a href="#">Indice</a></li>
+	  				<li><a href="#">Productos</a></li>
+	  				<li><a href="#">Locales</a></li>
+	  				<li><a href="#">Diseña tu tarta</a></li>
+	  			</ul>
+		  	</nav>
+		  	</div>
+		  	
+	  	</header>
+	  	<div>
+	  		Este es el contenido
+	  	</div>
+	  	<footer>
+	  		<p>Información de contacto</p>
+	  		<ul>
+	  			<li><img alt="face" /></li>
+	  			<li><img alt="instagram" /></li>
+	  			<li><img alt="twitter" /></li>
+	  		</ul>
+	  	</footer>
+  </body>
+</html>
