cambios en el diseno

--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
   <body>
 	  	<header>
 		  	<div class="jumbotron">
-		  		<div>
-			  		<h1>Najuvis</h1>
-			  		<p>Un regalo de la vida merece una celebración</p>
-			  		<a href="#"><img alt="face" /></a>
-		  			<a href="#"><img alt="instagram" /></a>
-		  			<a href="#"><img alt="twitter" /></a>
+		  		<div id="title">
+		  			<h2 class="titleNajuvis">Najuvis</h2>
+			  		<p class="eslogan">Un regalo de la vida merece una celebración</p>
 	  			</div>
-	  			<nav class="navbar navbar-default">
-			       <a class="navbar-brand" href="#">Najuvis</a>
+		  	</div>
+		  	<nav class="navbar navbar-default">
+			       <!--<a class="navbar-brand" href="#">Najuvis</a>-->
 	  			<ul class="nav navbar-nav">
 
 	  				<li class="active"><a href="#">Indice</a></li>
 	  				<li><a href="#">Productos</a></li>
 	  				<li><a href="#">Locales</a></li>
 	  				<li><a href="#">Diseña tu tarta</a></li>
+	  				<li><a href="#"><img alt="face" /></a></li>
+	  				<li><a href="#"><img alt="instagram" /></a></li>
+	  				<li><a href="#"><img alt="twitter" /></a></li>
 	  			</ul>
 		  	</nav>
-		  	</div>
 		  	
 	  	</header>
 	  	<div>
