--- a/index.html
+++ b/index.html
@@ -6,8 +6,20 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<title>Najuvis</title>
 	<link rel="shortcut icon" HREF="images/logo.jpg"/>
+	<!--CSS-->
 	<link rel="stylesheet" type="text/css" href="css/bootstrap/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/index.css" />
+	<link href="css/ninja-slider.css" rel="stylesheet" type="text/css" />
+	<!--JAVASCRIPT-->
+    <script src="js/control/SliderControl/ninja-slider.js" type="text/javascript"></script>
+    <script src="js/control/SliderControl/ninjaVideoPlugin.js" type="text/javascript"></script>
+	<!--CSS FONTS-->
+	<link href="http://fonts.googleapis.com/css?family=Goudy+Bookletter+1911" rel="stylesheet" type="text/css">
+	<link href="http://fonts.googleapis.com/css?family=Raleway:100" rel="stylesheet" type="text/css">
+	<link href="http://fonts.googleapis.com/css?family=Allan:bold" rel="stylesheet" type="text/css">
+	<link href="http://fonts.googleapis.com/css?family=Cardo" rel="stylesheet" type="text/css">
+	<link href="http://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet" type="text/css">
+	<link href="http://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet" type="text/css">
   </head>
   <body>
 	  	<header>
@@ -20,28 +32,44 @@
 		  	<nav class="navbar navbar-default">
 			       <!--<a class="navbar-brand" href="#">Najuvis</a>-->
 	  			<ul class="nav navbar-nav">
-
-	  				<li class="active"><a href="#">Indice</a></li>
+	  				<li><a href="#">Indice</a></li>
 	  				<li><a href="#">Productos</a></li>
 	  				<li><a href="#">Locales</a></li>
 	  				<li><a href="#">Diseña tu tarta</a></li>
-	  				<li><a href="#"><img alt="face" /></a></li>
-	  				<li><a href="#"><img alt="instagram" /></a></li>
-	  				<li><a href="#"><img alt="twitter" /></a></li>
+	  				<li><a href="#"><img src="images/facebook.png" alt="face" width="20" height="20" class="redSocial"/></a></li>
+	  				<li><a href="#"><img src="images/instagram.jpg" alt="instagram" width="20" height="20" class="redSocial"/></a></li>
+	  				<li><a href="#"><img src="images/twitter.png" alt="twitter" width="20" height="20" class="redSocial"/></a></li>
 	  			</ul>
 		  	</nav>
 		  	
 	  	</header>
 	  	<div>
+	  	<!--start-->
+        <div id='ninja-slider'>
+            <ul>
+                <li><div data-image="images/products/1.jpg" class="imagesSlider"></div></li>
+                <li><div data-image="images/products/cookies.jpg" class="imagesSlider"></div></li>
+                <li>
+                    <div data-image="images/products/1.jpg" class="imagesSlider">
+                        <a class="video" href="https://www.youtube.com/watch?v=j6PbonHsqW0"></a>
+                    </div>
+                </li>
+                <li><div data-image="images/products/1.jpg" class="imagesSlider"></div></li>
+                <li><a data-image="images/products/1.jpg" class="imagesSlider"></a></li>
+            </ul>
+        </div>
+        <!--end-->
 	  		Este es el contenido
 	  	</div>
-	  	<footer>
-	  		<p>Información de contacto</p>
-	  		<ul>
-	  			<li><img alt="face" /></li>
-	  			<li><img alt="instagram" /></li>
-	  			<li><img alt="twitter" /></li>
-	  		</ul>
+	  	<footer class="footer">
+	  		<p class="infoContact">Información de contacto</p>
+	  		<div class="socialLogos">
+		  		<ul class="nav navbar-nav">
+		  			<li><a href="#"><img src="images/facebook.png" alt="face" width="20" height="20"/></a></li>
+	  				<li><a href="#"><img src="images/instagram.jpg" alt="instagram" width="20" height="20" class="redSocial"/></a></li>
+	  				<li><a href="#"><img src="images/twitter.png" alt="twitter" width="20" height="20"/></a></li>
+		  		</ul>
+	  		</div>
 	  	</footer>
   </body>
 </html>
