Creadas las plantillas y estructura del menu. Diseno de indice y productos anadido.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<script src="js/model/userObj.js" type="text/javascript" xml:space="preserve"></script>
 
   </head>
-  <body ng-controller="najuvisManagementController as cafeteriaCtrl" ng-init="cafeteriaCtrl.getProductsData()">
+  <body ng-controller="najuvisManagementController as najuvisCtrl" ng-init="najuvisCtrl.getProductsData()">
 	  	<header>
 		  	<div class="jumbotron">
 		  		<div id="title">
@@ -47,19 +47,22 @@
 		  	<nav class="navbar navbar-default">
 			       <!--<a class="navbar-brand" href="#">Najuvis</a>-->
 	  			<ul class="nav navbar-nav">
-	  				<li><a href="#">Indice</a></li>
-	  				<li><a href="#">Productos</a></li>
-	  				<li><a href="#">Locales</a></li>
-	  				<li><a href="#">Diseña tu tarta</a></li>
-	  				<li><a href="#"><img src="images/facebook.png" alt="face" width="20" height="20" class="redSocial"/></a></li>
-	  				<li><a href="#"><img src="images/instagram.jpg" alt="instagram" width="20" height="20" class="redSocial"/></a></li>
-	  				<li><a href="#"><img src="images/twitter.png" alt="twitter" width="20" height="20" class="redSocial"/></a></li>
+	  				<li><a href="#" ng-click="pageToShow = 0">Indice</a></li>
+	  				<li><a href="#" ng-click="pageToShow = 1">Productos</a></li>
+	  				<li><a href="#" ng-click="pageToShow = 2">Locales</a></li>
+	  				<li><a href="#" ng-click="pageToShow = 3">Diseña tu tarta</a></li>
+	  				<li class="redSocialLi"><a href="#"><img src="images/facebook.png" alt="face" width="20" height="20" class="redSocial"/></a></li>
+	  				<li class="redSocialLi"><a href="#"><img src="images/instagram.jpg" alt="instagram" width="20" height="20" class="redSocial"/></a></li>
+	  				<li class="redSocialLi"><a href="#"><img src="images/twitter.png" alt="twitter" width="20" height="20" class="redSocial"/></a></li>
 	  			</ul>
 		  	</nav>
 	  	</header>
 	  	<div id="content">
 	  	<!-- TEMPLATES ANGULAR-->
-	  		<recommended id=""></recommended>
+	  		<recommended id="recommended"></recommended>
+	  		<products id="products"></products>
+	  		<locals id="locals"></locals>
+	  		<cake-designer id="cakeDesigner"></cake-designer>
 	  	<!-- *****************-->
 	  	</div>
 	  	<footer class="footer">
