--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 			       <!--<a class="navbar-brand" href="#">Najuvis</a>-->
 	  			<ul class="nav navbar-nav">
 	  				<li><a href="#" ng-click="pageToShow = 0">Indice</a></li>
-	  				<li><a href="#" ng-click="pageToShow = 1">Productos</a></li>
-	  				<li><a href="#" ng-click="pageToShow = 2">Locales</a></li>
-	  				<li><a href="#" ng-click="pageToShow = 3">Diseña tu tarta</a></li>
+	  				<li><a href="./templates/products.html" ng-click="pageToShow = 1">Productos</a></li>
+	  				<li><a href="./locales" ng-click="pageToShow = 2">Locales</a></li>
+	  				<li><a href="./diseny" ng-click="pageToShow = 3">Diseña tu tarta</a></li>
 	  				<li class="redSocialLi"><a href="#"><img src="images/facebook.png" alt="face" width="20" height="20" class="redSocial"/></a></li>
 	  				<li class="redSocialLi"><a href="#"><img src="images/instagram.jpg" alt="instagram" width="20" height="20" class="redSocial"/></a></li>
 	  				<li class="redSocialLi"><a href="#"><img src="images/twitter.png" alt="twitter" width="20" height="20" class="redSocial"/></a></li>
@@ -60,9 +60,9 @@
 	  	<div id="content">
 	  	<!-- TEMPLATES ANGULAR-->
 	  		<recommended id="recommended"></recommended>
-	  		<products id="products"></products>
+	  		<!--<products id="products"></products>
 	  		<locals id="locals"></locals>
-	  		<cake-designer id="cakeDesigner"></cake-designer>
+	  		<cake-designer id="cakeDesigner"></cake-designer>-->
 	  	<!-- *****************-->
 	  	</div>
 	  	<footer class="footer">
