Anadidas plantillas de header y footer

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			       <!--<a class="navbar-brand" href="#">Najuvis</a>-->
 	  			<ul class="nav navbar-nav">
 	  				<li><a href="#" ng-click="pageToShow = 0">Indice</a></li>
-	  				<li><a href="./templates/products.html" ng-click="pageToShow = 1">Productos</a></li>
+	  				<li><a href="products.html" ng-click="pageToShow = 1">Productos</a></li>
 	  				<li><a href="./locales" ng-click="pageToShow = 2">Locales</a></li>
 	  				<li><a href="./diseny" ng-click="pageToShow = 3">Diseña tu tarta</a></li>
 	  				<li class="redSocialLi"><a href="#"><img src="images/facebook.png" alt="face" width="20" height="20" class="redSocial"/></a></li>
