--- a/app-najuvis-backend/index.html
+++ b/app-najuvis-backend/index.html
@@ -4,9 +4,9 @@
   <head>
 		<meta charset="utf-8">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<title>catering compani Tasteful</title>
+		<title>NAJUVIS | Log in</title>
 		
-		<link rel="shortcut icon" HREF="images/logo.jpeg"/>
+		<link rel="shortcut icon" HREF="images/logo.png"/>
 		<!-- css-->
 		<link rel="stylesheet" type="text/css" href="css/bootstrap/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/index.css" />
@@ -21,10 +21,6 @@
 		<!-- jQuery-->
 		<script src="js/frameWorks/jQuery/jQuery.js" type="text/javascript" xml:space="preserve"></script>
 		
-		<!-- Datepicker-->
-		<script src="js/frameWorks/jQuery/jquery.min.js" type = "text/javascript"></script>
-		<script src="js/frameWorks/jQuery/jquery-ui.min.js" type = "text/javascript"></script>
-		
 		<!-- Own code-->  
 		<script src="js/model/userObj.js" type="text/javascript" xml:space="preserve"></script>	
 		<script src="js/control/generalFunctions.js" type="text/javascript" xml:space="preserve"></script>
@@ -33,11 +29,12 @@
   </head>
 
   <body class="documentColor" ng-controller="najuvisLogController as sessionCtrl" ng-init="sessionCtrl.checkSession()">
-	<div id="imageStart" align="left"><img id="NajuvisCompany" src="images/logo.png"/><h2 id="title">Administrador NAJUVIS</h2></div>
+	<img id="NajuvisCompany" src="images/logo.png" />
 	<div id="connectionForm">
+		<h3 id="title">Administrador NAJUVIS</h3>
 		<form name="userConnection" novalidate ng-submit="userConnection.$valid && sessionCtrl.login()">
 			<div>
-				<table>
+				<table class="table">
 					<tr>
 						<td><input type="text" placeholder="User" id="userNick" required ng-model="sessionCtrl.user.nick"/></td>
 					</tr>
