--- a/app-najuvis-backend/clientsWindow.html
+++ b/app-najuvis-backend/clientsWindow.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="es" lang="es" ng-app="najuvisManagement">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="es" lang="es" ng-app="clientsManagement">
   <head>
 		<meta charset="utf-8">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -26,14 +26,29 @@
 		<script src="js/frameWorks/jQuery/jquery-ui.min.js" type = "text/javascript"></script>
 		
 		<!-- Own code-->  
-		<script src="js/model/clientObj.js" type="text/javascript" xml:space="preserve"></script>	
+		<script src="js/model/clientObj.js" type="text/javascript" xml:space="preserve"></script>
+		<script src="js/model/userObj.js" type="text/javascript" xml:space="preserve"></script>
 		<script src="js/control/generalFunctions.js" type="text/javascript" xml:space="preserve"></script>
 		<script src="js/control/clientsWindow.js" type="text/javascript" xml:space="preserve"></script>
   </head>
 
-  <body class="documentColor" ng-controller="najuvisController as sessionCtrl" ng-init="sessionCtrl.checkSession()">
-	<a><div style="border:1px solid black">
-		<h2 id="title" align="left" style="display: inline;">Administrador Clientes</h2> 
-	</div></a>
+  <body class="documentColor" ng-controller="clientsController as clientsCtrl" ng-init="clientsCtrl.checkSession()">
+	<header>
+		<h2 id="title"><a href="adminWindow.html">Administrador</a> > Lista Clientes</h2>
+	</header>
+	<div id="templates" ng-init="clientsCtrl.getAllClients()">
+		<table class="table">
+			<tr><th>Selccionar</th><th>Nombre</th><th>Email</th><th>DNI</th><th>Telefono</th><th>Modificar</th><th>Eliminar</th></tr>
+			<tr ng-repeat="client in clientsCtrl.clientsArray" id="row{{client.getId()}}">
+				<td><input type="checkbox" id="{{client.getId()}}" /></td>
+				<td>{{client.getName()}} {{client.getSurname1()}} {{client.getSurname2()}}</td>
+				<td>{{client.getEmail()}}</td>
+				<td>{{client.getDni()}}</td>
+				<td>{{client.getPhone()}}</td>
+				<td>Modifica</td>
+				<td style="color:red" ng-click="clientsCtrl.deleteClient($index)">X</td>
+			</tr>
+		</table>
+	</div>
   </body>
 </html>
